kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-external
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
